@@ -27,11 +27,15 @@ Reference implementation of:
     FTN14: FutoIn Cache
     Version: 1.0 (client)
     
+    FTN4: FutoIn Interface - Ping-Pong
+    Version: 1.0 (client)
+
 * Spec: [FTN7: Interface Invoker Concept v1.x](http://specs.futoin.org/final/preview/ftn7_iface_invoker_concept-1.html)
 * Spec: [FTN3: FutoIn Interface Definition v1.x](http://specs.futoin.org/final/preview/ftn3_iface_definition.html)
 * Spec: [FTN5: FutoIn HTTP integration v1.x](http://specs.futoin.org/final/preview/ftn5_iface_http_integration.html)
 * Spec: [FTN9: FutoIn Interface - AuditLog v1.x](http://specs.futoin.org/final/preview/ftn9_if_auditlog.html)
 * Spec: [FTN14: FutoIn Cache v1.x](http://specs.futoin.org/final/preview/ftn14_cache.html)
+* Spec: [FTN14: FutoIn Interface - Ping-Pong v1.x](http://specs.futoin.org/final/preview/ftn4_if_ping.html)
 
 [Web Site](http://futoin.org/)
 
@@ -907,7 +911,7 @@ Interface communication error. Fired during call processing.
 <a name="NativeIface._specs"></a>
 
 ### NativeIface._specs
-Must object with version => spec pairs in child class, if set.
+Must be object with version => spec pairs in child class, if set.
 
 **Kind**: static property of [<code>NativeIface</code>](#NativeIface)  
 <a name="NativeIface._specs_module_prefix"></a>
